--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/enhancer.jpg">
+          <img class="img-polaroid" src="/imiges/enhancer.jpg" alt="./imiges/enhancer.jpg" width="480" height="300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -158,7 +158,7 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>10000</h3> <p>backers</p>
+                <h3>10,000</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
@@ -201,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="imiges/enhancer.jpg">
+          <img class="img-polaroid" src="~/imiges/enhancer.jpg">
         </div>
         <div class="span5 copy">
           <p>
