--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="/imiges/enhancer.jpg" alt="./imiges/enhancer.jpg" width="480" height="300">
+          <img class="img-polaroid" src="./enhancer.jpg" alt="./enhancer.jpg" width="480" height="300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
