--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="~/imiges/enhancer.jpg">
+          <img class="img-polaroid" src="~/imiges/enhancer.jpg" alt="view of enhancer" height = "480" width = "300">
         </div>
         <div class="span5 copy">
           <p>
@@ -227,7 +227,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://://ec2-54-235-63-55.compute-1.amazonaws.com:8080/enhancer.jpg" height="480" width="300" alt=" view of enhancer " >
         </div>
       </div>
 
