--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="./enhancer.jpg" alt="Video of enhancers" width="480" height="150">
+          <img class="img-polaroid" src="http://www.google.com/imgres?biw=1366&bih=667&tbm=isch&tbnid=4PPif8UHdCWyrM:&imgrefurl=http://www.avert.org/teens-condoms.htm&docid=Rv_PxQeRfmrxwM&imgurl=http://www.avert.org/media/content/layout/condom-infographic.jpg&w=970&h=444&ei=MsbqUZ6uK86p0AXbTg&zoom=1&ved=1t:3588,r:17,s:0,i:141&iact=rc&page=2&tbnh=152&tbnw=332&start=11&ndsp=22&tx=127&ty=76" alt="Video of enhancers" width="480" height="150">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
