--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="~/imiges/enhancer.jpg" alt="view of enhancer" height = "480" width = "300">
+          <img class="img-polaroid" src="http://www.google.com/imgres?biw=1366&bih=667&tbm=isch&tbnid=4PPif8UHdCWyrM:&imgrefurl=http://www.avert.org/teens-condoms.htm&docid=Rv_PxQeRfmrxwM&imgurl=http://www.avert.org/media/content/layout/condom-infographic.jpg&w=970&h=444&ei=MsbqUZ6uK86p0AXbTg&zoom=1&ved=1t:3588,r:17,s:0,i:141&iact=rc&page=2&tbnh=152&tbnw=332&start=11&ndsp=22&tx=127&ty=76" alt="view of enhancer" height = "480" width = "300">
         </div>
         <div class="span5 copy">
           <p>
@@ -227,7 +227,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://://ec2-54-235-63-55.compute-1.amazonaws.com:8080/enhancer.jpg" height="480" width="300" alt=" view of enhancer " >
+          <img class="img-polaroid" src="http://www.google.com/imgres?biw=1366&bih=667&tbm=isch&tbnid=4PPif8UHdCWyrM:&imgrefurl=http://www.avert.org/teens-condoms.htm&docid=Rv_PxQeRfmrxwM&imgurl=http://www.avert.org/media/content/layout/condom-infographic.jpg&w=970&h=444&ei=MsbqUZ6uK86p0AXbTg&zoom=1&ved=1t:3588,r:17,s:0,i:141&iact=rc&page=2&tbnh=152&tbnw=332&start=11&ndsp=22&tx=127&ty=76" height="480" width="300" alt=" view of enhancer " >
         </div>
       </div>
 
