--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="enhancer.jpg" alt="Video of enhancers" width="480" height="150">
+          <img class="img-polaroid" src="static/condom.mp4"  type="video/mp4" alt="Video of enhancers" width="480" height="150">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="enhancer.jpg" alt="view of enhancer" height = "480" width = "300">
+          <img class="img-polaroid" src="static/enhancer.jpg" alt="view of enhancer" height = "480" width = "300">
         </div>
         <div class="span5 copy">
           <p>
@@ -227,7 +227,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="enhancer.jpg" height="480" width="300" alt=" view of enhancer " >
+          <img class="img-polaroid" src="static/enhancer.jpg" height="480" width="300" alt=" view of enhancer " >
         </div>
       </div>
 
