--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="static/condom.mp4"  type="video/mp4" alt="Video of enhancers" width="480" height="150">
+        <video src="static/condom22m.webm" type="video/webm" alt="Right Click to view Video of enhancers" width="480" height="300">
+<!--          <img class="img-polaroid" src="http://www.youtube.com/watch?v=11LFPWyghy8"type="video/mp4" alt="Video of enhancers" width="480" height="300">
+-->
+	</video>
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,7 +204,8 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="static/enhancer.jpg" alt="view of enhancer" height = "480" width = "300">
+        <!--  <img class="img-polaroid" src="static/enhancer.jpg" alt="view of enhancer" height = "480" width = "300"> -->
+	<img class="polaroid" src="http://i.imgur.com/SRTemMPs.jpg" alt="View of enhancer" height="480" width="300">
         </div>
         <div class="span5 copy">
           <p>
@@ -227,7 +231,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="static/enhancer.jpg" height="480" width="300" alt=" view of enhancer " >
+          <img class="img-polaroid" src="http://i.imgur.com/SRTemMPs.jpg"  height="480" width="300" alt=" view of enhancer " >
         </div>
       </div>
 
