--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-        <video src="static/report.webm" type="video/webm" alt="Right Click to view Video" width="480" height="300">
+        <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="480" height="300">
 	</video>
         </div>
 
