--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Structured reporting software tool</title>
+    <title>Integrated reporting tool and publisher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -134,19 +134,20 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Easy report generation and book writing</h1>
+          <h1>On the fly report generation and book publishing</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Register and use this software to gather information and save it to the cloud on the go. No need to sit in  front of your computor and slave away for hours. Take this on the  go and take photos, add comments, select scenes and put your paragraphs together while living the experience.</p>
+          <p class="lead">This software is used to gather information and save it to the cloud on the go.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-        <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="480" height="300">
+<!--         <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="480" height="300">-->
+         <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="300" height="300">
 	</video>
         </div>
 
@@ -208,12 +209,12 @@
         </div>
         <div class="span5 copy">
           <p>
-	   Taking the report and book writer mobile software with you on your experience or meeting
-	   will allow you to add photos, maps to your book or report. 
-	   Visiting a work site, capture your findings on photo or add your voice comments to your 
-	   report while at the site. Start the report and find a new formatted report at the office.
+	   Taking this reporting and book publishing mobile software with you on your experience 
+	   or meeting will allow you to add photos, maps and voice to your book or report or books. 
+	   Visiting a work site, capture your findings on photo/video or add your voice comments to your 
+	   report while on site. Start the report and find a new formatted report at the office.
 
-	   Writing a book. why not add photos and voice paragraphs to your books. This is the new
+	   Writing a book. why not add photos/video and voice paragraphs to your books. This is the new
 	   books you will see on the web. No more boring paragraph after paragraph, highlight the 
 	   environment with a photo or voice description. 
 	   Add your own voice or format the voice to a new sexy voice. 
@@ -228,9 +229,8 @@
         <div class="span5 offset1 copy copy-right">
           <p>
 	    Delete your old and boring books. This is the new book format. 
-	    Include sound, video and map references and even the youth will be iterested in
-	    your book.
-	    
+	    Include sound, photos, video, drawings, voice and map references and even the youth will 
+	    be interested in your book.
 	    
          </p>
         </div>
