--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 <!--         <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="300" height="300"> -->
 <video width="300" height="300" controls>
   <source src="static/reports.webm" type="video/webm" alt="Video advertiseing publisher">
+    <source src="static/report.MOV" type="video/mov" alt="Video advertiseing publisher">
     <source src="static/reports.mp4" type="video/mp4" alt="Video advertiseing publisher">
       Your browser does not support the video tag.
 	</video>
