--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
 <!--         <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="480" height="300">-->
 <!--         <video src="static/reports.webm" type="video/webm" alt="Right Click to view Video" width="300" height="300"> -->
 <video width="300" height="300" controls>
-  <source src="static/reports.webm" type="video/webm" alt="Video advertiseing publisher">
-    <source src="static/report.MOV" type="video/mov" alt="Video advertiseing publisher">
-    <source src="static/reports.mp4" type="video/mp4" alt="Video advertiseing publisher">
+  <source src="static/reports.webm" type="video/webm" alt="Video advertising publisher">
+    <source src="static/report.mp4" type="video/mp4" alt="Video advertising publisher">
       Your browser does not support the video tag.
 	</video>
         </div>
