fix the heading and links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Integrated reporting tool and publisher</title>
+    <title>IntRep's Integrated reporting tool and publisher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -119,19 +119,22 @@
 </script>
   </head>
   <body>
+<!-- 06/08/2013 nardus move to the inside of the block
 <!-- adthis web site button control -->
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-<a class="addthis_button_preferred_1"></a>
+<!-- <a class="addthis_button_preferred_1"></a>
 <a class="addthis_button_preferred_2"></a>
 <!--<a class="addthis_button_preferred_3"></a> -->
 <!--<a class="addthis_button_preferred_4"></a> -->
-<a class="addthis_button_compact"></a>
-<a class="addthis_counter addthis_bubble_style"></a>
+<!--<a class="addthis_button_compact"></a> -->
+<!--<a class="addthis_counter addthis_bubble_style"></a> -->
 </div>
+
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fe2fef0643c1ec"></script>
 <!-- AddThis Button END -->
+<!-- 06/08/2013 nardus end
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -143,7 +146,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">IntRep reports and books</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -225,8 +228,18 @@
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+<!-- nardus 6/8/2013 try to add to the right place -->
+		 <!-- adthis web site button control -->
+		 <!-- AddThis Button BEGIN -->
+		 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		   <a class="addthis_button_preferred_1"></a>
+		   <a class="addthis_button_preferred_2"></a>
+		   <a class="addthis_button_compact"></a>
+		   <a class="addthis_counter addthis_bubble_style"></a>
+		 </div>
+<!-- nardus 6/8/2013 end -->
+<!-- remove these icons 6/8/13            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button> -->
           </div>
         </div>
       </div>
@@ -244,8 +257,8 @@
         <div class="span5 copy">
           <p>
 	   Taking this reporting and book publishing mobile software with you on your experience 
-	   or meeting will allow you to add photos, maps and voice to your book or report or books. 
-	   Visiting a work site, capture your findings on photo/video or add your voice comments to your 
+	   or meeting will allow you to add photos, maps and voice to your report or books. 
+	   Visiting a work site and capture your findings on photo/video or add your voice comments to your 
 	   report while on site. Start the report and find a new formatted report at the office.
 
 	   Writing a book. why not add photos/video and voice paragraphs to your books. This is the new
