--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -223,7 +222,14 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<!-- 06/08/2013 nardus remove pre order button and add coinbase generated button
+<!--            <button class="btn btn-success btn-large">Preorder</button> -->
+<a class="coinbase-button" 
+ data-code="3178b9df754fc166c65d82f0ee72125b" 
+ href="https://coinbase.com/checkouts/3178b9df754fc166c65d82f0ee72125b">
+ Pay With Bitcoin</a>
+ <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<!-- nardus end -->
           </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
