fixed bitcoins as backers money

--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>10,000</h3> <p>backers</p>
+                <h3>10,000</h3> <p>Backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$60</h3> <p>of $600,000</p>
+                  <h3>B0.6</h3> <p>of B100,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -267,13 +267,6 @@
 	   Visiting a work site and capture your findings on photo/video or add your voice comments to your 
 	   report while on site. Start the report and find a new formatted report at the office.
 
-	   Writing a book. why not add photos/video and voice paragraphs to your books. This is the new
-	   books you will see on the web. No more boring paragraph after paragraph, highlight the 
-	   environment with a photo or voice description. 
-	   Add your own voice or format the voice to a new sexy voice. 
-	   Enjoy your own book after the finished product was formatted like you have never enjoyed
-	   any book.
-	   
        </p>
         </div>
       </div>
@@ -281,6 +274,13 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
+           Writing a book. why not add photos/video and voice paragraphs to your books. This is the new                      
+           books you will see on the web. No more boring paragraph after paragraph, highlight the                            
+           environment with a photo or voice description.                                                                    
+           Add your own voice or format the voice to a new sexy voice.                                                       
+           Enjoy your own book after the finished product was formatted like you have never enjoyed                          
+           any book. 
+
 	    Delete your old and boring books. This is the new book format. 
 	    Include sound, photos, video, drawings, voice and map references and even the youth will 
 	    be interested in your book.
