--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          padding: 2.5% 10%;
        }
        .linediv-l {
-         border-bottom: 1px white solid;
+5~5~[5~~5~5~5~5~5~~5~         border-bottom: 1px white solid;
        }
        .linediv-r {
          border-top: 1px white solid;
@@ -256,7 +256,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="static/books.jpg" alt="Stack of books." height = "480" width = "300">
+        <img class="img-polaroid" src="static/book2.jpg" alt="Stack of books." height = "480" width = "300">
 <!--	<img class="polaroid" src="http://i.imgur.com/SRTemMPs.jpg" alt="View of enhancer" height="480" width="300">
 -->
         </div>
@@ -274,6 +274,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
+
            Writing a book. why not add photos/video and voice paragraphs to your books. This is the new                      
            books you will see on the web. No more boring paragraph after paragraph, highlight the                            
            environment with a photo or voice description.                                                                    
@@ -289,7 +290,7 @@
         </div>
         <div class="span5 asset">
     <!--      <img class="img-polaroid" src="http://i.imgur.com/SRTemMPs.jpg"  height="480" width="300" alt=" view of enhancer " > -->
-        <img class="img-polaroid" src="static/books.jpg" alt="Stack of books" height = "480" width = "300">
+        <img class="img-polaroid" src="static/book2.jpg" alt="Stack of books" height = "480" width = "300">
 
         </div>
       </div>
@@ -330,6 +331,13 @@
 		    Receive a formatted report or book at the office or home.
                   </div>
                 </div>
+		<a>
+		  <div id="contact" class="accordion-body collapse">
+                    <div class="accordion-inner">
+		   Contact IntRep  : Nardus@nardus.mygbiz.com
+		    </div>
+		  </div>
+		 </a>
               </div>
             </div>
           </div>
