--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@
 <!-- 06/08/2013 nardus remove pre order button and add coinbase generated button
 <!--            <button class="btn btn-success btn-large">Preorder</button> -->
 <a class="coinbase-button" 
- data-code="3178b9df754fc166c65d82f0ee72125b" 
- href="https://coinbase.com/checkouts/3178b9df754fc166c65d82f0ee72125b">
- Pay With Bitcoin</a>
+ data-code="1401be0350e9ea43d9d60d7aef653a91" data-button-style="donation_large" 
+ href="https://coinbase.com/checkouts/1401be0350e9ea43d9d60d7aef653a91">Donate Bitcoins</a>
  <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 <!-- nardus end -->
           </div>
