--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="static/book2.jpg" alt="Stack of books." height = "480" width = "300">
+        <img class="img-polaroid" src="static/b3.jpg" alt="Stack of books." height = "480" width = "300">
 <!--	<img class="polaroid" src="http://i.imgur.com/SRTemMPs.jpg" alt="View of enhancer" height="480" width="300">
 -->
         </div>
@@ -289,7 +289,7 @@
         </div>
         <div class="span5 asset">
     <!--      <img class="img-polaroid" src="http://i.imgur.com/SRTemMPs.jpg"  height="480" width="300" alt=" view of enhancer " > -->
-        <img class="img-polaroid" src="static/book2.jpg" alt="Stack of books" height = "480" width = "300">
+        <img class="img-polaroid" src="static/b3.jpg" alt="Stack of books" height = "480" width = "300">
 
         </div>
       </div>
