--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a> href="Orders">Orders</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
